[package]
name = "maple"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "maple"
crate-type = ["cdylib", "staticlib", "rlib"]
test = false
bench = false

[dependencies]
rustix = { version = "1.0.7", default-features = false, features = [
    "runtime",
    "stdio",
] }
