[package]
name = "maple"
version = "0.1.0"
edition = "2024"

[lib]
name = "c"
crate-type = ["cdylib", "staticlib", "rlib"]
test = false
bench = false

[dependencies]
builtins = { package = "compiler_builtins", version = "0.1.160", default-features = false, features = [
    "mem",
    "mangled-names",
] }
itoa = "1.0.15"
ryu = "1.0.20"
xenia = "0.0.2"
